2016 Cowboy Festival and new Lifetime Membership

--- a/Event_Pages/cowboyfest.html
+++ b/Event_Pages/cowboyfest.html
@@ -93,7 +93,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                   <td width="50">&nbsp;</td>
                   <td width="896">
                     <div class="TTL" align="center">
-                      <p style="margin-top: 0"><font color="#800000">2015
+                      <p style="margin-top: 0"><font color="#800000">2016
 
 
                           Santa Clarita Cowboy Festival</font></p>
@@ -191,7 +191,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                   <td valign="top" width="876">
                     <hr>
 <div id="titleside">
-<h2>The 2015 Santa Clarita Cowboy Festival will be in William S. Hart&rsquo;s Park!</h2>
+<h2>The 2016 Santa Clarita Cowboy Festival will again be in William S. Hart&rsquo;s Park!</h2>
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="topside">
@@ -199,45 +199,62 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
 <p>Time to wake up and smell the grits! Time to trade in our business casual for chaps, our hardhats for Stetsons, and ride into town on a paint instead of a Pontiac.</p>
 <p>That&rsquo;s because, saddle-pals, once again here comes the Santa Clarita Cowboy Festival! And this year, Friends, Hart Park will be at the &ldquo;Hart&rdquo; of the action!</p>
 <h3 style="display: inline;">The Friends of Hart Park is especially proud to host two very special nights of entertainment, in the William S. Hart's living room up at the mansion.
-Seating is limited, so get your tickets to the fun right <a href="http://www.cowboyfestival.org/tickets" target="_blank">HERE</a></h3>
+Seating is limited, so get your tickets to the fun right <a href="http://cowboyfestival.org/venues/hart-mansion" target="_blank">HERE</a></h3>
 <small style="display: inline;"> (Opens a new window) </small>
 <h3 style="display: inline;">or click below for further details.</h3>
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="leftside">
-<p>Friday, Apr. 17<sup>th</sup> at 8pm for $45</p>
-<a href="http://cowboyfestival.org/an-evening-with-cow-bop-at-william-s-hart-mansion/" target="_blank">
-<h2>Cow Bop At The Hart</h2>
-<img src="cowboyfest2015/cowbop.png" />
+<p>Friday, Apr. 22<sup>nd</sup> at 8pm for $65</p>
+<a href="http://cowboyfestival.org/schedule/don-edwards-at-hart-mansion/" target="_blank">
+<h2>Don Edwards &mdash; The Man and His Music</h2></a>
+<small style="display: inline;"> (Opens a new window) </small>
+<a href="http://cowboyfestival.org/schedule/don-edwards-at-hart-mansion/" target="_blank">
+<img src="cowboyfest2016/DonEdwards.jpg" />
 </a>
-<p>Western Swing at its best rolls into Cowboy Movie Star William S. Hart&rsquo;s Historic Mansion for a special, one-night only, intimate, living room concert.</p>
-<p>Fresh from their 2014 induction into the Western Swing Hall of Fame, this award-winning group has had audiences tappin&rsquo; toes from Texas to New Zealand for more than 12 years. 
-Carnegie Hall was a highlight for the band.</p>
-<p>With their unique blend of Be Bop, Western Swing, Blues, Big Band and Honky Tonk, vocalist Pinto Pammy, guitarist Bruce Forman and the band bring a fresh, original approach to songs that are sure to please everyone.</p>
-<p>Their music is served hot and jazzy, so be ready to have a western swingin&rsquo; good time! &ldquo;It will be the most fun you can have with your spurs on&rdquo;<p>
-<p><em>This is their ONLY appearance at the Festival this year!</em></p>
+<p>One of Western music's most celebrated artists gives a rare, intimate performance in 
+cowboy movie star William S. Hart's living room.</p>
+<p>
+An historian, author and musicologist, unusually well-versed in
+cowboy lore and musical traditions, Don brings a rare complement
+of knowing and loving his craft. Mostly though, there is the soul of
+a poet; a man who has never succumbed to the temptations of
+presenting a glamorized or romanticized version of the West.
+Edwards deals with bad weather, petty motivations, sadness, nostalgia and longing as parts of the landscape
+like any other.</p>
+<p>Don's rich, trail etched voice will take 
+you back to those lonely nights on the trail with his Grammy nominated songs of coyotes, 
+longhorns, drovers, outlaws, and lost romance.</p>
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="rightside">
-<p>Saturday, Apr. 18<sup>th</sup> at 8pm for $40</p>
-<a href="http://cowboyfestival.org/an-evening-with-buffalo-bill-at-william-s-hart-mansion/" target="_blank">
-<h2>An Evening with Buffalo Bill</h2>
-<img src="cowboyfest2015/buffalobill.png" />
+<p>Saturday, Apr. 23<sup>rd</sup> at 8pm for $35</p>
+<a href="http://cowboyfestival.org/schedule/wyatt-earp/" target="_blank">
+<h2>Wyatt Earp &mdash; the Life Behind the Legend</h2></a>
+<small style="display: inline;"> (Opens a new window) </small>
+<a href="http://cowboyfestival.org/schedule/wyatt-earp/" target="_blank">
+<img src="cowboyfest2016/Casey-Wyatt.jpg" />
 </a>
-<p>Step back into the old west as historical consultant, actor and author Peter Sherayko performs what has been called 
-&ldquo;One of the best Buffalo Bill shows in production today&rdquo;.</p>
-<p>Much like the real showman, Peter has thrilled audiences all over the world with his one-man show. 
-He embodies this western icon, telling of his life struggles and hardships, along with colorful tales of Wild Bill Hickok, Geronimo, Annie Oakley and others.</p>
-<p>And what better way to experience Buffalo Bill than in real life Cowboy Movie Star William S. Hart&rsquo;s own living room, surrounded by his Remingtons and Russells. An intimate evening of nostalgia, humor and history.
-<p><em>EXCLUSIVE - One Night Only!</em></p>
+<p>Forget what you have seen in the movies about Wyatt Earp. New York Times best selling 
+author-historian Casey Tefertiller pulls back the curtain and reveals the <em>true story</em> of 
+this legendary Frontier Marshal.  Casey was nominated for a Pulitzer Prize for his 
+groundbreaking research and book &ldquo;Wyatt Earp: Life Behind The Legend&rdquo;</p>
+<p>
+      The real life Wyatt Earp was a close friend of western movie star William S. Hart and 
+      in fact was a pallbearer at the famous lawman's funeral. Enjoy a rare evening of real 
+      history in Bill Hart's Mansion living room, learning about Tombstone, Earps years spent 
+      right here in Los Angeles and his friendship with our own William S. Hart. 
+</p>
+<p><em>This is Casey's only Southern California appearance.</em></p>
 </div>
 <!--------------------------------------------------------------------------------------- -->
 <div id="footside">
 <h3>Remember, seating is limited, so get your tickets 
-<a href="http://www.cowboyfestival.org/tickets" target="_blank">HERE.</a></h3>
-<p>The 2015 Santa Clarita Cowboy Festival will take place this year between April 15<sup>th</sup> and 19<sup>th</sup>. Unlike previous years, the festival will make downtown Newhall its home. And when we say &ldquo;downtown Newhall,&rdquo; we really mean the William S. Hart Park!</p>
-<a href="http://www.cowboyfestival.org/tickets" target="_blank">
-<img src="cowboyfest2015/newlocation.png" />
+<a href="http://cowboyfestival.org/venues/hart-mansion/" target="_blank">HERE.</h3>
+<video loop autoplay muted poster="Event_Pages/cowboyfest2016/CowboyFestival2016.png">
+<source src="cowboyfest2016/CowboyFestival2016lg.m4v" type="video/mp4"
+Hart Mansion events are Apr. 22-23!
+</video>
 </a>
 </div>
                   </td>
