--- a/index.htm
+++ b/index.htm
@@ -239,6 +239,20 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                           <td align="center" valign="top" width="557">
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
+                                    <p align="center">
+                                      <a href="Event_Pages/cowboyfest.html"
+                                        title="2016 Cowboy Festival Apr. 21-24">
+                                        <h2>2016 Cowboy Festival Apr. 21-24</h2>
+                                        <h3>Hart Mansion events are Apr. 22-23!</h3>
+                                        <video loop autoplay muted poster="Event_Pages/cowboyfest2016/CowboyFestival2016.png">
+                                            <source src="Event_Pages/cowboyfest2016/CowboyFestival2016.m4v" type="video/mp4"
+                                            Hart Mansion events are Apr. 22-23!
+                                        </video>
+                                      </a>
+                                    </p>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                 <h2>2016 Calendar of Events</h2>
                                 <!--
                                 <h3>Click on links as details become available</h3>
@@ -252,14 +266,16 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       <td id="EventDate">Thursday&ndash;Sunday, Apr. 21-24</td>
                                       <td id="Event">
                                       <a target="_blank" href="http://cowboyfestival.org">
-                                      Cowboy Festival at Hart Park!</a> featuring these FOHP events:
+                                      Cowboy Festival at Hart Park!</a> 
+                                        <small style="display: inline;"> (Opens a new window) </small> 
+                                        featuring these FOHP events:
                                       </td>
                                     </tr>
                                     <tr>
                                       <td align="right" id="EventDate">
                                       Friday,<br>Apr. 22<sup>nd</sup> 8pm</td>
                                       <td id="Event">
-                                      <a target="_blank" href="http://cowboyfestival.org/venues/hart-mansion/">
+                                      <a href="Event_Pages/cowboyfest.html">
                                       Don Edwards&mdash;the Man &amp; his Music</a>
                                       </td>
                                     </tr>
@@ -267,16 +283,28 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       <td align="right" id="EventDate">
                                       Saturday,<br>Apr. 23<sup>nd</sup> 8pm</td>
                                       <td id="Event">
-                                      <a target="_blank" href="http://cowboyfestival.org/venues/hart-mansion/">
+                                      <a href="Event_Pages/cowboyfest.html">
                                       Wyatt Earp&mdash;the Life behind the Legend</a>
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, Aug. 13<sup>th</sup> (tentative)</td>
+                                      <td id="EventDate">Saturday &amp; Sunday, May 7-8</td>
+                                      <td id="Event">
+                                      Pacific Islander Festival
+                                      </td>
+                                    <tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Aug. 13<sup>th</sup></td>
                                       <td id="Event">
                                       Silents Under the Stars!
                                       </td>
                                     </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday &amp; Sunday, Oct. 1-2 (tentative)</td>
+                                      <td id="Event">
+                                      Hart of the West Pow Wow
+                                      </td>
+                                    <tr>
                                     <tr>
                                       <td id="EventDate">Sunday, Oct. 9<sup>th</sup> 11am&ndash;4pm</td>
                                       <td id="Event">
@@ -303,17 +331,6 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     </tr>
                                   </tbody>
                                 </table>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-                                    <p align="center">
-                                      <a target="_blank" 
-                                      href="https://www.facebook.com/liliana.west/posts/10207378384489185"
-                                        title="Cowboys & Carols">
-                                        <h3>Click here to see pictures from 2015&rsquo;s</h3>
-                                        <img src="Event_Pages/CowboysCarols2015-sm.png" />
-                                        </a>
-                                    </p>
                       </tbody>
                     </table>
                     <hr>
