--- a/The_Friends/index.html
+++ b/The_Friends/index.html
@@ -120,12 +120,15 @@ Please join The Friends of Hart Park!  We are people in your community who volun
 <p>
 All the proceeds from your membership go to supporting our ongoing efforts for the park, museum, artifacts and the animals. Thank you for your support!
 </h4>
-<h3>Membership categories &amp; additional benefits</h3>
+<h3>Annual (except where indicated) Membership categories &amp; additional benefits</h3>
 		<h4>
 		<TABLE border="0" cellpadding="0" cellspacing="10">
 			<TBODY>
 				<TR>
 					<td><b>Individual&mdash;$25</b></td>
+				</TR>
+				<TR>
+					<td><b>LIFETIME Individual&mdash;$500</b></td>
 				</TR>
 				<TR>
 					<td><b>Family&mdash;$40</b></td>
@@ -193,13 +196,12 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 			</tbody>
 		</table>
 		</h4>
-
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="F7U4PL4HUPBSW">
 <table>
 <tr><td><input type="hidden" name="on0" value="Select the level of your new membership:">Select the level of your new membership:</td></tr><tr><td><select name="os0">
-    <option value="Individual">Individual $25.00 USD</option>
+    <option value="Individual or Volunteer (see Note)">Individual or Volunteer (see Note) $25.00 USD</option>
     <option value="Family">Family $40.00 USD</option>
     <option value="Sponsor">Sponsor $75.00 USD</option>
     <option value="Patron">Patron $125.00 USD</option>
@@ -207,8 +209,8 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
     <option value="Gold">Gold $500.00 USD</option>
     <option value="Diamond">Diamond $1,000.00 USD</option>
     <option value="Corporate Benefactor">Corporate Benefactor $2,500.00 USD</option>
-    <option value="Volunteer (see Note)">Volunteer (see Note) $25.00 USD</option>
     <option value="Senior/Student">Senior/Student $15.00 USD</option>
+    <option value="Lifetime Individual">Lifetime Individual $500.00 USD</option>
 </select> </td></tr>
 <tr><td><input type="hidden" name="on1" value="Phone Number:">Phone Number:</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
 </table>
@@ -216,6 +218,7 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 
 
 </p>
