--- a/index.htm
+++ b/index.htm
@@ -239,20 +239,6 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                           <td align="center" valign="top" width="557">
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
-                                    <p align="center">
-                                      <a href="Event_Pages/cowboyfest.html"
-                                        title="2016 Cowboy Festival Apr. 21-24">
-                                        <h2>2016 Cowboy Festival Apr. 21-24</h2>
-                                        <h3>Hart Mansion events are Apr. 22-23!</h3>
-                                        <video loop autoplay muted poster="Event_Pages/cowboyfest2016/CowboyFestival2016.png">
-                                            <source src="Event_Pages/cowboyfest2016/CowboyFestival2016.m4v" type="video/mp4"
-                                            Hart Mansion events are Apr. 22-23!
-                                        </video>
-                                      </a>
-                                    </p>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                 <h2>2016 Calendar of Events</h2>
                                 <!--
                                 <h3>Click on links as details become available</h3>
@@ -263,34 +249,9 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Thursday&ndash;Sunday, Apr. 21-24</td>
+                                      <td id="EventDate">Saturday &amp; Sunday, June 4-5 10am-4pm</td>
                                       <td id="Event">
-                                      <a target="_blank" href="http://cowboyfestival.org">
-                                      Cowboy Festival at Hart Park!</a> 
-                                        <small style="display: inline;"> (Opens a new window) </small> 
-                                        featuring these FOHP events:
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td align="right" id="EventDate">
-                                      Friday,<br>Apr. 22<sup>nd</sup> 8pm</td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/cowboyfest.html">
-                                      Don Edwards&mdash;the Man &amp; his Music</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td align="right" id="EventDate">
-                                      Saturday,<br>Apr. 23<sup>nd</sup> 8pm</td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/cowboyfest.html">
-                                      Wyatt Earp&mdash;the Life behind the Legend</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, May 7-8</td>
-                                      <td id="Event">
-                                      Pacific Islander Festival
+                                      Artisan Row Home Arts &amp; Crafts Show
                                       </td>
                                     <tr>
                                     <tr>
@@ -317,7 +278,20 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       Cowboys &amp; Carols
                                       </td>
                                     </tr>
+                                    <tr>
                                     <td colspan="2">
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+                                    <p align="center">
+                                        <video id="goose" controls autoplay muted poster="Zoo/Geese.png">
+                                            <source src="Zoo/Geese.m4v" type="video/mp4"
+                                            March on over to William S. Hart Park!
+                                        </video>
+                                    </p>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                     <h3 align="center">Join in the fun by<br><a href="The_Friends/membership.html">
                                     joining The Friends of Hart Park</a>!</h3></td>
                                         <!--
