--- a/index.html
+++ b/index.html
@@ -251,9 +251,48 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, June 4-5 10am-4pm</td>
                                       <td id="Event">
+                                      <a href="Event_Pages/artisan2016.jpg" rel="lightbox[art]">
                                       Artisan Row Home Arts &amp; Crafts Show
+                                      </a>
                                       </td>
+                                    </tr>
                                     <tr>
+                                      <td id="EventDate">Friday, June 17<sup>th</sup> at dusk</td>
+                                      <td id="Event">
+                                      Free Summer Movie in the Park:
+                                      <a href="Event_Pages/movies2016/starWars.png" rel="lightbox[movies]">
+                                      Star Wars: The Force Awakens
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Friday, July 1<sup>st</sup> at dusk</td>
+                                      <td id="Event">
+                                      Free Summer Movie in the Park:
+                                      Zootopia
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Friday, July 15<sup>th</sup> at dusk</td>
+                                      <td id="Event">
+                                      Free Summer Movie in the Park:
+                                      Inside Out
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Friday, July 29<sup>th</sup> at dusk</td>
+                                      <td id="Event">
+                                      Free Summer Movie in the Park:
+                                      Batman vs Sperman
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Friday, Aug. 5<sup>th</sup> at dusk</td>
+                                      <td id="Event">
+                                      Free Summer Movie in the Park:
+                                      Hotel Transylvania 2
+                                      </td>
+                                    </tr>
                                     <tr>
                                       <td id="EventDate">Saturday, Aug. 13<sup>th</sup></td>
                                       <td id="Event">
