--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       <td id="EventDate">Friday, July 29<sup>th</sup> at dusk</td>
                                       <td id="Event">
                                       Free Summer Movie in the Park:
-                                      Batman vs Sperman
+                                      Batman vs Superman
                                       </td>
                                     </tr>
                                     <tr>
