--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -119,24 +119,21 @@ function MM_swapImage() { //v3.0
 										<font size="5">The Friends Of Hart Park 
 										<br>
 										and the<br>
-&nbsp;William S. Hart Park &amp; Museum</font></span></span></p>
-<h3 align="center">would like to thank all who came to 2015's</h3>
+&nbsp;William S. Hart Park &amp; Museum present:</font></span></span></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
 											<p align="center">
-											on
+											Join us on
 											<h3 align="center">
-											Saturday, August 8<sup>th</sup>, 
-											2015 6pm</h3></span></TD>
+											Saturday, August 13<sup>th</sup>, 
+											2016 6pm</h3></span></TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-<h1 align="center">Check back for 2016's fun!</h1>
-<!--
 											<h3>Buy tickets here! </h3>
 											<h4>(select quantity on shopping cart page)</h4>
 <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -145,15 +142,15 @@ function MM_swapImage() { //v3.0
 <table>
 <tr><td><input type="hidden" name="on0" value="Select type of ticket:">Select type of ticket:</td></tr><tr><td><select name="os0">
     <option value="Individual Ticket">Individual Ticket $50.00 USD</option>
-        <option value="Reserved Table for 10">Reserved Table for 10 $500.00 USD</option>
-        </select> </td></tr>
-        <tr><td><input type="hidden" name="on1" value="Name for Pickup at Will-Call">Name for Pickup at Will-Call</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-        </table>
-        <input type="hidden" name="currency_code" value="USD">
-        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    <option value="Reserved Table for 10">Reserved Table for 10 $500.00 USD</option>
+</select> </td></tr>
+<tr><td><input type="hidden" name="on1" value="Name for Pickup at Will-Call">Name for Pickup at Will-Call</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-        
+
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
@@ -163,7 +160,6 @@ function MM_swapImage() { //v3.0
 											<span style="letter-spacing: normal">
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 											<font size="4">Tickets are non-Refundable</font></span></span></p>
--->
 											</TD>
 											</TR>
 											<TR>
@@ -175,29 +171,15 @@ function MM_swapImage() { //v3.0
 											<B class="EVNTC">Just Announced!</B>
 <p>
 <h1 align="center">Silents Under the Stars:</h1><br>
-<h1 class="silents">&ldquo;Hart &amp; Humor!&rdquo;</h1><br>
 <div>
-<figure id="silentsleftthird">
-<img src="silents/LaughingBill1.jpg" />
-<figcaption>image courtesy of the Seaver Center for Western History Research, Los Angeles County Museum of Natural History</figcaption>
-</figure>
-<img id="silentsrightthird" src="silents/LaughingBill2.jpg" />
-<h2 align="center">
-We are very tickled to do something a little different this year... we're going to focus on <b>William S. Hart</b> and his contribution to humor!  Yes, you heard us right!<br><br>
-</h2>
-</div>
-<h3 align="center">In addition to our Hart feature &ldquo;<em>Blue Blazes Rawden</em>&rdquo;, we'll be showing one of the most famous William S. Hart parody films, the <b>Buster Keaton</b> classic &ldquo;<em>Frozen North</em>&rdquo;!
-Come join us for these and other surprises, and prepare to have your ribs tickled as we explore Hart & Humor.
+<img id="silentsrightthird" src="silents/bargain.jpg" />
+<h1 class="silents">Featuring William S. Hart's first feature film, from 1914, &ldquo;The Bargain.&rdquo;</h1><br>
+<h2 align="center">In addition to our Hart feature film, we'll be showing a rare short subject
+and will feature a special guest!</h2><p>
+<h2 align="center">As always, our movie will be accompanied LIVE by <em>Mr. Ray Lowe</em> at the keyboard.</p></h2>
 </h3>
+</div>
 <p align="center">
-Bill Hart made such an impact on the movie-going audience, as well as on his actor peers, it was inevitable that parodies would result.  Some of them Bill liked, others not so much.  Probably the funniest of these is <em>Frozen North</em>, made by one of the greatest comedians of the 20<sup>th</sup> century, Buster Keaton.
-<p align="center">
-The Hart movie we've chosen is one of Bill's best, and happens to also take place in the &ldquo;north&rdquo;, <em>Blue Blazes Rawden</em>, wherein our cowboy hero plays a lumberjack!
-<p align="center">
-As always, our movie will be accompanied LIVE by <em>Mr. Ray Lowe</em> at the keyboard!</p>
-<p align="center">
-Before the movie, we'll enjoy western music laced with levity, direct from Frontier-Land,
-Mr. &ldquo;Mild&rdquo; Bill &amp; his Mild Cats!</p>
 										</td>
 													</tr>
 													<tr>
@@ -209,7 +191,7 @@ Mr. &ldquo;Mild&rdquo; Bill &amp; his Mild Cats!</p>
 										<span class="Apple-style-span">
 										<span style="letter-spacing: normal">
 										<font face="Copperplate Gothic Bold" size="6" color="#770000">
-										featuring music by our special guest,direct from Frontier-Land, <em>Mr. &ldquo;Mild&rdquo; Bill &amp; his Mild Cats</em>!
+										featuring music by our special guest, direct from Frontier-Land, <em>Mr. &ldquo;Mild&rdquo; Bill &amp; his Mild Cats</em>!
                                         <img class="centeredImage" src="silents/MildBillMildCats.jpg"/></p><br>
                                         But that's not all!...
                                         </font></span></span></p>
