--- a/index.html
+++ b/index.html
@@ -239,10 +239,22 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                           <td align="center" valign="top" width="557">
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
+                                    <a href="Event_Pages/silents.html">
+                                    <img id="rightside" src="Event_Pages/silents/westernMovie.jpg"/>
+                                    </a>
+                                    <p>
+                                    <h1 align="right">Silents Under the Stars tickets now on sale!</h1>
+                                    </p>
+                                    <p>
+                                    <h2 align="right">
+                                    <a href="Event_Pages/silents.html">
+                                    Click here </a> to get yours today!</h2>
+                                    </p>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                 <h2>2016 Calendar of Events</h2>
-                                <!--
                                 <h3>Click on links as details become available</h3>
-                                -->
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
@@ -283,7 +295,9 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                       <td id="EventDate">Saturday, Aug. 13<sup>th</sup></td>
                                       <td id="Event">
+                                      <a href="Event_Pages/silents.html">
                                       Silents Under the Stars!
+                                      <a>
                                       </td>
                                     </tr>
                                     <tr>
