Added remaining movies.  Made Pow Wow more obviously not ready for 2016.

--- a/index.htm
+++ b/index.htm
@@ -261,15 +261,6 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Friday, July 1<sup>st</sup> at dusk</td>
-                                      <td id="Event">
-                                      Free Summer Movie in the Park:
-                                      <a href="Event_Pages/movies2016/zootopia.png" rel="lightbox[movies]">
-                                      Zootopia
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Friday, July 15<sup>th</sup> at dusk</td>
                                       <td id="Event">
                                       Free Summer Movie in the Park:
@@ -282,14 +273,18 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       <td id="EventDate">Friday, July 29<sup>th</sup> at dusk</td>
                                       <td id="Event">
                                       Free Summer Movie in the Park:
+                                      <a href="Event_Pages/movies2016/batmanVsuperman.png" rel="lightbox[movies]">
                                       Batman vs Superman
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
                                       <td id="EventDate">Friday, Aug. 5<sup>th</sup> at dusk</td>
                                       <td id="Event">
                                       Free Summer Movie in the Park:
+                                      <a href="Event_Pages/movies2016/hotelTransylvania.png" rel="lightbox[movies]">
                                       Hotel Transylvania 2
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
@@ -301,7 +296,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, Oct. 1-2 (tentative)</td>
+                                      <td id="EventDate">Saturday &amp; Sunday, Oct. 1-2</td>
                                       <td id="Event">
                                       Hart of the West Pow Wow
                                       </td>
