Removed Paypal from Silents Updated Pow Wow for 2016 Removed past summer movies

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -134,6 +134,7 @@ function MM_swapImage() { //v3.0
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
+<!--
 											<h3>Buy tickets here! </h3>
 											<h4>(select quantity on shopping cart page)</h4>
 <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -150,16 +151,18 @@ function MM_swapImage() { //v3.0
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-
+-->
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-											<font size="4">To buy tickets over the phone, or for 
-											additional info, Call<br>(661) 222&ndash;9542</font></p>
+											<font size="4">For info, Call<br>(661) 222&ndash;9542</font></p>
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span style="letter-spacing: normal">
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
-											<font size="4">Tickets are non-Refundable</font></span></span></p>
+                                            <!--
+											<font size="4">Tickets are non-Refundable</font>
+                                            -->
+                                            </span></span></p>
 											</TD>
 											</TR>
 											<TR>
