--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <img id="rightside" src="Event_Pages/silents/westernMovie.jpg"/>
                                     </a>
                                     <p>
-                                    <h1 align="right">Silents Under the Stars tickets now on sale!</h1>
+                                    <h1 align="right">Silents Under the Stars Saturday August 13th!</h1>
                                     </p>
                                     <p>
                                     <h2 align="right">
                                     <a href="Event_Pages/silents.html">
-                                    Click here </a> to get yours today!</h2>
+                                    Click here </a> for more info!</h2>
                                     </p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -258,26 +258,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
-                                    <tr>
                                   <tbody>
-                                    <tr>
-                                      <td id="EventDate">Friday, July 29<sup>th</sup> at dusk</td>
-                                      <td id="Event">
-                                      Free Summer Movie in the Park:
-                                      <a href="Event_Pages/movies2016/batmanVsuperman.png" rel="lightbox[movies]">
-                                      Batman vs Superman
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Friday, Aug. 5<sup>th</sup> at dusk</td>
-                                      <td id="Event">
-                                      Free Summer Movie in the Park:
-                                      <a href="Event_Pages/movies2016/hotelTransylvania.png" rel="lightbox[movies]">
-                                      Hotel Transylvania 2
-                                      </a>
-                                      </td>
-                                    </tr>
                                     <tr>
                                       <td id="EventDate">Saturday, Aug. 13<sup>th</sup></td>
                                       <td id="Event">
