Made Silent sold out. Linked to Pow Wow from the main page.

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -157,6 +157,7 @@ function MM_swapImage() { //v3.0
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<font size="4">For info, Call<br>(661) 222&ndash;9542</font></p>
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+                                            <h1 align="center"><br>Sold Out!</h1>
 											<span style="letter-spacing: normal">
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
                                             <!--
