--- a/index.html
+++ b/index.html
@@ -243,12 +243,13 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <img id="rightside" src="Event_Pages/silents/westernMovie.jpg"/>
                                     </a>
                                     <p>
-                                    <h1 align="right">Silents Under the Stars Saturday August 13th!</h1>
+                                    <h1 align="right">Silents Under the Stars Saturday August 13<sup>th</sup>
+                                    Sold Out!</h1>
                                     </p>
                                     <p>
-                                    <h2 align="right">
+                                    <h3 align="right">
                                     <a href="Event_Pages/silents.html">
-                                    Click here </a> for more info!</h2>
+                                    Click here </a> for more info!</h3>
                                     </p>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -270,7 +271,9 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Oct. 1-2</td>
                                       <td id="Event">
+                                      <a href="Event_Pages/powwow.html">
                                       Hart of the West Pow Wow
+                                      </a>
                                       </td>
                                     <tr>
                                     <tr>
