Fixed another mistake in a lightbox link.

--- a/index.htm
+++ b/index.htm
@@ -297,7 +297,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                       <td id="EventDate">Saturday, Nov. 5<sup>th</sup></td>
                                       <td id="Event">
-                                      <a href="Event_Pages/artist2016.png" rel="lightbox[rose]">
+                                      <a href="Event_Pages/rose2016.png" rel="lightbox[rose]">
                                         "Wild West" Rose Show
                                       </a>
                                       </td>
