Fixed messed up date and time on art thing.

--- a/index.htm
+++ b/index.htm
@@ -288,7 +288,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, Oct. 15<sup>th</sup> 11am&ndash;4pm</td>
+                                      <td id="EventDate">Saturday &amp; Sunday, Oct. 15-16</td>
                                       <td id="Event">
                                       <a href="Event_Pages/artist2016.png" rel="lightbox[art]">
                                       SCV Artists Association Art Classic</a>
