Linked to Silents photos.  Added link to museum/mansion page.

--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -119,6 +119,38 @@ function MM_swapImage() { //v3.0
 					&nbsp;
 					</TD>
 				</TR>
+				<TR>
+					<TD width="60">
+					<IMG border="0" src="../images/spacer.gif" width="2">
+					</TD>
+					<TD width="876" valign="top">
+<h1>Click 
+<a href="https://www.facebook.com/media/set/?set=a.1163228533742088.1073741831.171859949545623&type=1&l=bd0de0aaaf" target="_blank"> HERE</a> for photos from 2016!</h1>
+<i>photos courtesy Kim Stephens</i>
+					</TD>
+					<TD width="60">
+					&nbsp;
+					</TD>
+				</TR>
+				<TR>
+					<TD width="60">
+					<IMG border="0" src="../images/spacer.gif" width="2">
+					</TD>
+					<TD width="876" valign="top">
+<p>"Great fun!" "Wonderful evening!" "Best 'Silents' ever!" "We'll be back next year" &mdash; were some of the comments as people picked up auction winnings and stopped to chat as they headed home after a hugely successful "Silents Under The Stars" at Hart Park on Saturday, August 13th. 
+</p><p>
+A capacity crowd of 224 guests was entertained by "Mild Bill and the Mild cats"; browsed through silent auction choices of 92 items; enjoyed a delicious BBQ meal catered by Rattlers and listened as organist Ray Lowe played another of his original musical compositions for "The Bargain" &mdash; Bill Hart's first feature length silent movie. 
+</p><p>
+An unexpected treat was a short video of an interview with Bill Hart's long time friend Joel McCrea, followed by a brief appearance and presentation by his Grandson Wyatt McCrea.
+</p><p>
+Hayden Sohm, Deputy Director of Parks and Recreation, presented a scroll to Friends Of Hart Park for our continuing efforts to support and maintain the traditions of Hart Park and keep alive the memories of the old west.
+</p><p>
+Event organizer, Sherron Blowers, assisted by several hard working committee members and volunteers, planned and executed an incredible evening of good fun, great entertainment, and fund raising for continuing support of the Park.
+					</TD>
+					<TD width="60">
+					&nbsp;
+					</TD>
+				</TR>
 			</TBODY>
 		</TABLE>
 	 </td>
