--- a/Mansion/museum.html
+++ b/Mansion/museum.html
@@ -33,6 +33,7 @@ Parks and Recreation. Picnic facilities are available in the park. There is a na
 this 260 acre "Horseshoe Ranch."<br><br>William S. Hart park is less than an hour's drive from most areas of Los Angeles. From mid-September to mid-June, <b>free tours</b> of the house 
 are available Wednesday through Sunday, noon to 3pm (last tour at 2:30). In summer, tours are available Wednesday 
 through Sunday, 11am to 4pm (last tour at 3:30). Handicap accommodations are available.</P>
+<p> For more Museum information, visit <a href="http://www.hartmuseum.org" target="_blank">www.hartmuseum.org</a>.</p>
 			</TD>
 		</TR>
 	</TBODY>
