--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       <td id="EventDate">Saturday &amp; Sunday, Oct. 15-16</td>
                                       <td id="Event">
                                       <a href="Event_Pages/artist2016.png" rel="lightbox[art]">
-                                      SCV Artists Association Art Classic</a>
+                                      Santa Clarita Artists Association Art Classic</a>
                                       </td>
                                     </tr>
                                     <tr>
