Made pow wow past event, and put in flyer for Hart Holiday Boutique.

--- a/index.htm
+++ b/index.htm
@@ -265,29 +265,6 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, Sep. 10-11</td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/train2016.png" rel="lightbox[train]">
-                                      Train Show
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, Oct. 1-2</td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/powwow.html">
-                                      Hart of the West Pow Wow
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Sunday, Oct. 9<sup>th</sup> 11am&ndash;4pm</td>
-                                      <td id="Event">
-                                      <a target="_blank" href="http://www.bowwowsandmeows.org/">
-                                      Bow Wows &amp; Meows pet fair</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Oct. 15-16</td>
                                       <td id="Event">
                                       <a href="Event_Pages/artist2016.png" rel="lightbox[art]">
@@ -305,11 +282,12 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Nov. 26-27, 10am-4pm</td>
                                       <td id="Event">
+                                      <a href="Event_Pages/2016HartHolidayBoutique.png" rel="lightbox[boutique]">
                                       Hart Holiday Boutique &amp; Craft Fair
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, Dec. 3<sup>rd</sup> (tentative)</td>
+                                      <td id="EventDate">Saturday, Dec. 3<sup>rd</sup></td>
                                       <td id="Event">
                                       Cowboys &amp; Carols
                                       </td>
